--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/core": "^7.3.0",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
