--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/core": "^7.3.0",
+    "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "axios": "^1.7.9",
@@ -22,6 +23,7 @@
     "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0"
   },
